--- a/style/main.css
+++ b/style/main.css
@@ -4,11 +4,12 @@
 }
 
 body {
-  font-family: "Nunito Sans", sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 .main {
   background: linear-gradient(180deg, #0c4c7b -100%, #1e2f40 100%);
+  height: 100vh;
 }
 
 .container {
@@ -42,8 +43,8 @@ h1 span {
   margin-bottom: 10px;
 }
 
-p {
-  font-family: "Lato", sans-serif;
+.text p {
+  font-family: 'Lato', sans-serif;
   font-size: 19px;
   line-height: 1.4;
   margin-bottom: 42px;
@@ -71,16 +72,73 @@ a {
 .bg {
   width: 432px;
   height: 100%;
-  background: linear-gradient(
-    2.42deg,
-    #f37335 -19.6%,
-    #fbb731 100.79%,
-    #fdc830 100.79%
-  );
+  background: linear-gradient(2.42deg, #f37335 -19.6%, #fbb731 100.79%, #fdc830 100.79%);
 }
 
 img {
   width: 829px;
   position: absolute;
   right: -168px;
+}
+
+.promo {
+  padding-top: 186px;
+  padding-bottom: 186px;
+}
+
+.promo-left,
+.promo-right {
+  flex: 0 0 49%;
+  color: #fff;
+  box-sizing: border-box;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.promo-left {
+  background-image: url(/image/promo-left.png);
+  padding: 116px 50px;
+}
+
+.promo-left > p {
+  margin-bottom: 10px;
+}
+
+.promo-right {
+  background-image: url(/image/promo-right.png);
+  padding: 102px 50px;
+}
+
+.promo-right > p {
+  margin-bottom: 30px;
+}
+
+.sale {
+  font-size: 14px;
+  font-weight: 900;
+  background: #f37335;
+  border-radius: 14px;
+  padding: 5px 19px;
+  display: inline-block;
+  text-transform: uppercase;
+}
+.cost {
+  font-size: 60px;
+  font-weight: 900;
+}
+
+.description {
+  color: #faf9f9;
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
+  line-height: 24px;
+}
+
+.promo-left .description {
+  max-width: 392px;
+}
+
+.promo-right .description {
+  max-width: 300px;
 }
