--- a/style/main.css
+++ b/style/main.css
@@ -97,8 +97,11 @@ img {
 }
 
 .promo-left {
-  background-image: url(./image/promo-left.png);
+  background-image: url('./../image/promo-left.png');
   padding: 116px 50px;
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* background-color:#0c4c7b; */
 }
 
 .promo-left > p {
@@ -106,8 +109,11 @@ img {
 }
 
 .promo-right {
-  background-image: url(./image/promo-right.png);
+  background-image: url('./../image/promo-right.png');
   padding: 102px 50px;
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* background-color: #0c4c7b; */
 }
 
 .promo-right > p {
